style.css
@import url('https://fonts.googleapis.com/css2?family=Quintessential&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lavishly+Yours&display=swap');
.lav {
  font-family: "Lavishly Yours", cursive;
  font-weight: 400;
  font-style: normal;
}
.quint {
  font-family: "Quintessential", serif;
  font-weight: 400;
  font-style: normal;
}
@property --button-intensity {
    syntax: "<number>";
    inherits: false;
    initial-value: 0.5;
}
body {
    color: white;
    display: flex;
    justify-content: center;
    overflow: hidden;
    background-image: url("./background.jpg");
    background-size: 100% auto;
    background-position: top;
    background-repeat: no-repeat;
    height: 100vh;
}

@media(aspect-ratio < 0.61020175104) {
    body {
        background-size: auto 100vh;
        background-position: top;
    }
}


#clock-container, #notes-container {
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
}

#clock-container {
    opacity: 1;
    transform: translateY(0);
    display: flex;
    align-items: center;
    justify-content: center;
}
#notes-container {
    opacity: 0;
    transform: translateY(100vh);
}

#bottom-arrow-container, #top-arrow-container {
    --button-intensity: 0.7;
    display: flex;
    align-items: center;
    justify-content: center;
    position: fixed;
    z-index: 1;
    bottom: 0;
    width: 100vw;
    height: 10vh;
    background-image: linear-gradient(rgba(0, 0, 0, calc(var(--button-intensity) - 0.6)) 0%, rgba(0, 0, 0, var(--button-intensity)) 100%);
    transition: --button-intensity 0.2s ease-in-out;
}

#top-arrow-container {
    display: none;
    transform: rotateX(180deg);
    opacity: 0;
    top: 0;
}

#bottom-arrow-container:hover, #top-arrow-container:hover {
    --button-intensity: 0.9;
}

#bottom-arrow, #top-arrow {
    width: 4vh;
    height: 4vh;
    transform: rotate(45deg) translateX(-1vh) translateY(-1vh);
    border-right: 1vh solid rgb(255, 255, 255);
    border-bottom: 1vh solid rgb(255, 255, 255);
    transition: all 0.2s ease-in-out;
}

body:has(#bottom-arrow-container:hover) #bottom-arrow, body:has(#top-arrow-container:hover) #top-arrow {
    width: 4.1vh;
    height: 4.1vh;
    transform: rotate(45deg) translateX(-0.5vh) translateY(-0.5vh);
    border-right: 1.1vh solid rgb(255, 255, 255);
    border-bottom: 1.1vh solid rgb(255, 255, 255);
}

body:not(:has(#clock-container.active)) #notes-container {
    opacity: 1;
    transform: translateY(0);
}

body:not(:has(#clock-container.active)) #clock-container {
    opacity: 0;
    transform: translateY(-100vh);
}

body:not(:has(#clock-container.active)) #bottom-arrow-container {
    opacity: 0;
    display: none;
    transition: opacity 0.5s ease-in-out;
}

body:not(:has(#clock-container.active)) #top-arrow-container {
    opacity: 1;
    display: flex;
    transition: opacity 0.5s ease-in-out;
}

#clock {
    height: 50vh;
    display: grid;
    overflow: hidden;
}

#clock > * {
    grid-column: 1;
    grid-row: 1;
}

@keyframes time0 {
    0% {
        transform: translateX(-100%);
        opacity: 0;
    }
    3% {
        transform: translateX(0%);
        opacity: 1;
    }
    13.67% {
        transform: translateX(0%);
        opacity: 1;
    }
    --.67% {
        transform: translateX(100%);
        opacity:0
    }
    100% {
        transform: translateX(100%);
        opacity:0
    }
}

@keyframes time1 {
    0% {
        transform: translateX(-100%);
        opacity: 0;
    }
    --.67% {
        transform: translateX(-100%);
        opacity: 0;
    }
    19.67% {
        transform: translateX(0%);
        opacity: 1;
    }
    30.33% {
        transform: translateX(0%);
        opacity: 1;
    }
    33.33% {
        transform: translateX(100%);
        opacity:0
    }
    100% {
        transform: translateX(100%);
        opacity:0
    }
}

@keyframes time2 {
    0% {
        transform: translateX(-100%);
        opacity: 0;
    }
    33.33% {
        transform: translateX(-100%);
        opacity: 0;
    }
    36.33% {
        transform: translateX(0%);
        opacity: 1;
    }
    47% {
        transform: translateX(0%);
        opacity: 1;
    }
    50% {
        transform: translateX(100%);
        opacity: 0;
    }
    100% {
        transform: translateX(100%);
        opacity: 0;
    }
}

@keyframes time3 {
    0% {
        transform: translateX(-100%);
        opacity: 0;
    }
    50% {
        transform: translateX(-100%);
        opacity: 0;
    }
    53% {
        transform: translateX(0%);
        opacity: 1;
    }
    63.67% {
        transform: translateX(0%);
        opacity: 1;
    }
    66.67% {
        transform: translateX(100%);
        opacity: 0;
    }
    100% {
        transform: translateX(100%);
        opacity: 0;
    }
}

@keyframes time4 {
    0% {
        transform: translateX(-100%);
        opacity: 0;
    }
    66.67% {
        transform: translateX(-100%);
        opacity: 0;
    }
    69.67% {
        transform: translateX(0%);
        opacity: 1;
    }
    80.33% {
        transform: translateX(0%);
        opacity: 1;
    }
    83.33% {
        transform: translateX(100%);
        opacity: 0;
    }
    100% {
        transform: translateX(100%);
        opacity: 0;
    }
}

@keyframes time5 {
    0% {
        transform: translateX(-100%);
        opacity: 0;
    }
    83.33% {
        transform: translateX(-100%);
        opacity: 0;
    }
    86.33% {
        transform: translateX(0%);
        opacity: 1;
    } 
    97% {
        transform: translateX(0%);
        opacity: 1;
    }
    100% {
        transform: translateX(100%);
        opacity: 0;
    }
}

#years-date-box {
    animation: time0 15s linear 0s infinite;
}
#months-date-box {
    animation: time1 15s linear 0s infinite;
}
#days-date-box {
    animation: time2 15s linear 0s infinite;
}
#hours-date-box {
    animation: time3 15s linear 0s infinite;
}
#minutes-date-box {
    animation: time4 15s linear 0s infinite;
}
#seconds-date-box {
    animation: time5 15s linear 0s infinite;
}

.date-box {
    display: flex;
    gap: 1vh;
    flex-direction: column;
    height: 50vh;
    width: 60vw;
    text-align: center;
    overflow: hidden;
    text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.7)
}



.num {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 0;
    height: 60%;
    font-size: clamp(1rem, 8vw, 15vh);
}

.desc {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0;
    height: 40%;
    font-size: clamp(1rem, 8vw, 15vh);
}

@media(max-width: 600px) {
    .num {
        font-size: clamp(1rem, 12vw, 40vh);
    }
    .desc {
        font-size: clamp(1rem, 12vw, 40vh);
    }
}

@keyframes heart-up {
    0% {
        opacity: 0;
        transform: translateX(0) translateY(0) scale(0);
    }
    5% {
        opacity: 1;
    }
    50% {
        opacity: 1;
        transform: translateX(var(--sway)) translateY(calc(-1 * var(--up))) scale(1.5);
    }
    100% {
        opacity: 0;
        transform: translateX(var(--sway)) translateY(calc(-1 * var(--up))) scale(0);
    }
}

.heart {
    position: absolute;
    bottom: var(--y-pos);
    left: var(--x-pos);
    height: var(--size);
    user-select: none;
    z-index: 0;
    aspect-ratio: 1 / 1;
    animation: heart-up var(--time) ease-in-out;
}

#letter {
    text-shadow: 0px 0px 15px rgba(0, 0, 0, 1);
    font-size: clamp(1rem, 5vw, 4.2vh);
}

#notes-container {
    display: flex;
    align-items: center;
    padding-top: 10vh;
}

